--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ defaultTasks 'execute'
 apply plugin: 'java'
 
 dependencies {
-    compile files('./lib/resources.jar')
+    testCompile files('./resources/jfxrt.jar')
 }
 
 jar {
